--- a/pom.xml
+++ b/pom.xml
@@ -8,8 +8,8 @@
 		<version>2.7.18</version>
 		<relativePath/> <!-- lookup parent from repository -->
 	</parent>
-	<groupId>com.example</groupId>
-	<artifactId>APIAcuicultura</artifactId>
+	<groupId>api.aquanest</groupId>
+	<artifactId>APIAquaNest</artifactId>
 	<version>0.0.1-SNAPSHOT</version>
 	<name>APIAcuicultura</name>
 	<description>Demo project for Spring Boot</description>
